--- a/Backend/IRFestival.Api/appsettings.json
+++ b/Backend/IRFestival.Api/appsettings.json
@@ -8,5 +8,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:irfestivalsqlserverdd.database.windows.net,1433;Initial Catalog=irfestivaldbdd;Persist Security Info=False;User ID=irfestivaladmin;Password=dummy;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
