--- a/Backend/IRFestival.Api/appsettings.json
+++ b/Backend/IRFestival.Api/appsettings.json
@@ -11,5 +11,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:irfestivalsqlserverdd.database.windows.net,1433;Initial Catalog=irfestivaldbdd;Persist Security Info=False;User ID=irfestivaladmin;Password=dummy;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=85e942b3-2e43-4f31-90e8-757d7df3f471;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/"
   }
 }
