--- a/Backend/IRFestival.Api/appsettings.json
+++ b/Backend/IRFestival.Api/appsettings.json
@@ -14,5 +14,9 @@
   },
   "ApplicationInsights": {
     "ConnectionString": "InstrumentationKey=85e942b3-2e43-4f31-90e8-757d7df3f471;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/"
+  },
+  "Storage": {
+    "ThumbsContainer": "festivalthumbs",
+    "PicturesContainer": "festivalpics-uploaded"
   }
 }
