--- a/Backend/IRFestival.Functions/Properties/launchSettings.json
+++ b/Backend/IRFestival.Functions/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "IRFestival.Functions2": {
+    "IRFestival.Functions": {
       "commandName": "Project",
       "commandLineArgs": "--port 7230",
       "launchBrowser": false
