add api management

--- a/Backend/IRFestival.Api/appsettings.json
+++ b/Backend/IRFestival.Api/appsettings.json
@@ -9,6 +9,7 @@
     }
   },
   "AzureKeyVaultName": "irfestivalkeyvaultdd2",
+  "QueueNameMails": "mails",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=tcp:irfestivalsqlserverdd.database.windows.net,1433;Initial Catalog=irfestivaldbdd;Persist Security Info=False;User ID=irfestivaladmin;Password=dummy;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
